@@ -1,5 +1,7 @@
 Version 1.1.0 - ??? 2000
 
-* save image dialog and image-formats API have changed
-
 * Navigation window added
+
+* new indexed color image format: XPM
+
+* save image dialog and image-formats API have changed
